small fix to z-index issue

--- a/common/common.scss
+++ b/common/common.scss
@@ -133,7 +133,7 @@ div#main-outlet {
   background: rgba(255,255,255,0.5);
 }
 
-#mobile-menu {
+#mobile-menu>ul {
   z-index: 10000;
   position: relative;
   margin-right: 200px;
